[gd_scene load_steps=4 format=3 uid="uid://ebb720gj6a3y"]

[ext_resource type="StyleBox" uid="uid://dwxqhhtunho3f" path="res://ui/resources/dialog_styles.tres" id="1_2ogfs"]
[ext_resource type="Script" uid="uid://dpxjxqdcaolyq" path="res://ui/views/debug_intersections_view/debug_intersections_view.gd" id="2_nmikr"]
[ext_resource type="Texture2D" uid="uid://colv4c8bi5jc0" path="res://assets/ui_icons/close.png" id="3_vpi5a"]

[node name="DebugIntersectionsView" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -702.0
offset_bottom = -366.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_2ogfs")
script = ExtResource("2_nmikr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="HeaderContainer" type="BoxContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2

[node name="HeaderTitle" type="Label" parent="MarginContainer/BoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intersections"

[node name="CloseButton" type="Button" parent="MarginContainer/BoxContainer/HeaderContainer"]
layout_mode = 2
icon = ExtResource("3_vpi5a")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="BoxContainer" parent="MarginContainer/BoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4
vertical = true
